update multi-thread module